[FIX][UI] bs5: Materia and Quartz themes - Selec2 dropdown was missing background color and border.

--- a/themes/materia/scss/materia.scss
+++ b/themes/materia/scss/materia.scss
@@ -46,3 +46,9 @@ input[type="radio"],
 .navbar-dark-parent .form-control::placeholder, .navbar-dark-parent .form-control:focus, .navbar-dark-parent .form-control, .navbar-dark .form-control::placeholder, .navbar-dark .form-control:focus, .navbar-dark .form-control {
     color: rgba(255, 255, 255, 0.75);
 }
+
+// Select2 selector background was transparent and no border
+.tiki .select2-container--bootstrap-5 .select2-dropdown {
+    background-color: #fff;
+    border: 1px solid #d3d3d3;
+}
