--- a/themes/quartz/css/quartz.css
+++ b/themes/quartz/css/quartz.css
@@ -11168,6 +11168,11 @@ blockquote, .blockquote {
 .tiki .fc-daygrid-event-harness {
   background-color: #39cbfb;
 }
+.tiki .select2-container--bootstrap-5 .select2-dropdown {
+  background-color: transparent;
+  background-image: linear-gradient(125deg, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.2) 70%);
+  backdrop-filter: blur(5px);
+}
 .layout_basic .page-header.navbar-light-parent.bg-light-parent, .layout_classic .header_outer.bg-light-parent, .layout_social header.navbar-light-parent.bg-light-parent, .layout_social header.navbar.navbar-light.bg-light {
   background: var(--tiki-top-bg-light) !important;
   color: var(--tiki-top-light-color);
