--- a/themes/quartz/scss/_tiki-selectors.scss
+++ b/themes/quartz/scss/_tiki-selectors.scss
@@ -52,3 +52,8 @@ blockquote,
 .tiki .fc-daygrid-event-harness {
     background-color: $info;
 }
+.tiki .select2-container--bootstrap-5 .select2-dropdown {
+    background-color: transparent;
+    background-image: linear-gradient(125deg, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.2) 70%);
+    backdrop-filter: blur(5px);
+}
